--- a/app/templates/app/pet.html
+++ b/app/templates/app/pet.html
@@ -9,7 +9,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Booking</title>
+    <title>Quản lý thông tin pet</title>
     <style>
         body {
             font-family: Arial, sans-serif;
