--- a/project/CNPM/home/static/home/css/thucan.css
+++ b/project/CNPM/home/static/home/css/thucan.css
@@ -133,3 +133,12 @@
 .flex-row img{
   width: 70px;
 }
+.gh{
+  position: fixed;
+  height: 100vh;
+  width: 400px;
+  right: 0;
+  top: 0;
+  background-color: #9be9d7;
+  padding: 12px 20px;
+}
